--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-API_PORT=8080
-API_MYSQL_HOST=localhost
-API_MYSQL_PORT=3307
-API_MYSQL_USER=golang
-API_MYSQL_PASS=golang
-API_MYSQL_DB=golang
+API_GIN_PORT=8080
+API_GORM_DIALECT=mysql
+API_GORM_HOST=localhost
+API_GORM_PORT=3307
+API_GORM_USER=golang
+API_GORM_PASS=golang
+API_GORM_DB=golang
+API_GORM_LOG=true
